fixed links spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ a{
     margin: 40px auto;
 }
 .english, .arabic {
-    max-height: 100px; 
+    max-height: 100px;
     height: 8vw;
     margin: auto;
     padding: 0;
@@ -42,8 +42,9 @@ a{
     flex: 2;
     margin: 30px auto;
     width: 60%;
+    min-width: 300px;
     min-height: 100px;
     display: flex;
     justify-content: space-around;
-    align-items:  flex-start;;
+    align-items:  flex-start;
 }
